# backend_form

./: pyproject.toml  requirements.txt  server.py
django_project/: settings.py  urls.py
form/migrations/: 0001_initial.py  0002_remove_forms_states_forms_states.py  0003_alter_forms_states.py
form/models/: __init__.py  forms.py  hobbies.py  proglang.py  states.py
form/serializers/: __init__.py  forms.py  hobbies.py  proglang.py  states.py
form/views/: __init__.py  forms.py  hobbies.py  proglang.py  states.py
uploader/models/: image.py
